prevent overflow

--- a/src/styles/components/_chat-list.scss
+++ b/src/styles/components/_chat-list.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   cursor: pointer;
+  overflow: hidden;
 
   &:hover {
     background-color: $hover-color;
